Update navbar and add reusable clock

--- a/pages/tools/tools.html
+++ b/pages/tools/tools.html
@@ -2,22 +2,22 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Skills</title>
+  <title>Tools</title>
   <link rel="stylesheet" href="../../styles/style.css" />
 </head>
 
 <body>
   <!-- Navigation -->
   <nav>
-    <a class="nav-link" href="../../index.html">Home</a> |
-    <a class="nav-link" href="skills.html">Skills</a> |
-    <a class="nav-link" href="../../projects.html">Projects</a>
-    <a class="nav-link" href="../resume/resume.html"> About</a> |
-    <a class="nav-link" href="../tools/tools.html"> Tools </a>
-  </nav>
+        <a class="nav-link" href="../../index.html">Home</a> |
+        <a class="nav-link" href="pages/skills/skills.html">Skills</a> |
+        <a class="nav-link" href="projects.html">Projects</a> |
+        <a class="nav-link" href="../resume/resume.html"> About</a> |
+        <a class="nav-link" href="tools.html"> Tools </a>
+      </nav>
 
   <!-- Heading -->
-  <h1>Coding Skills</h1>
+  <h1>Tools</h1>
 
   <!-- List of skills -->
   <ul id="project-list">
@@ -25,11 +25,6 @@
     <li class="project"><a href="css-basics.html">CSS Basics</a></li>
     <li class="project"><a href="js-basics.html">JavaScript Basics</a></li>
   </ul>
-
-
-
-
-
 
   <!-- Clock -->
   <div id="clock-box" style="position: fixed; top: 10px; right: 20px; text-align: right;">
