--- a/pages/skills/css-basics.html
+++ b/pages/skills/css-basics.html
@@ -9,7 +9,9 @@
   <nav>
     <a class="nav-link" href="../../index.html">Home</a> |
     <a class="nav-link" href="skills.html">Skills</a> |
-    <a class="nav-link" href="../../projects.html">Projects</a>
+    <a class="nav-link" href="../../projects.html">Projects</a> |
+    <a class="nav-link" href="../resume/resume.html"> About</a> |
+    <a class="nav-link" href="../tools/tools.html"> Tools </a>
   </nav>
 
   <h1>CSS Basics</h1>
@@ -53,6 +55,12 @@
     <tr><td><code>@media</code></td><td>Make responsive layouts</td></tr>
   </table>
 
+  <!-- Clock and Date Display  -->
+  <div id="clock-box" style="position: fixed; top: 10px; right: 20px; text-align: right;">
+    <div id="clock" style="font-size: 14px;"></div>
+    <div id="date" style="font-size: 12px;"></div>
+  </div> 
+  
   <script src="../../scripts/script.js"></script>
 </body>
 </html>
