--- a/pages/skills/skills.html
+++ b/pages/skills/skills.html
@@ -11,7 +11,7 @@
   <nav>
     <a class="nav-link" href="../../index.html">Home</a> |
     <a class="nav-link" href="skills.html">Skills</a> |
-    <a class="nav-link" href="../../projects.html">Projects</a>
+    <a class="nav-link" href="../../projects.html">Projects</a> |
     <a class="nav-link" href="../resume/resume.html"> About</a> |
     <a class="nav-link" href="../tools/tools.html"> Tools </a>
   </nav>
