--- a/navbar.html
+++ b/navbar.html
@@ -1,4 +1,4 @@
-<!-- navbar.html -->
+<!-- Navigation Bar -->
 <nav>
   <a class="nav-link" href="index.html">Home</a> |
   <a class="nav-link" href="pages/skills/skills.html">Skills</a> |
