--- a/pages/resume/resume.html
+++ b/pages/resume/resume.html
@@ -6,11 +6,15 @@
   <link rel="stylesheet" href="../../styles/style.css" />
 </head>
 <body>
-  <nav>
-    <a href="../../index.html">Home</a> |
-    <a href="../skills/skills.html">Skills</a> |
-    <a href="../books/book-tracker.html">Books</a>
-  </nav>
+
+<!-- Navigation -->
+<nav>
+    <a class="nav-link" href="../../index.html">Home</a> |
+    <a class="nav-link" href="../skills/skills.html">Skills</a> |
+    <a class="nav-link" href="../../projects.html">Projects</a> |
+    <a class="nav-link" href="../resume/resume.html"> About</a> |
+    <a class="nav-link" href="../tools/tools.html"> Tools </a>
+</nav>
 
   <main>
     <h1>Emil Stokholm</h1>
