--- a/projects.html
+++ b/projects.html
@@ -18,7 +18,9 @@
   <nav>
     <a class="nav-link" href="index.html">Home</a> |
     <a class="nav-link" href="pages/skills/skills.html">Skills</a> |
-    <a class="nav-link" href="projects.html">Projects</a>
+    <a class="nav-link" href="projects.html">Projects</a> |
+    <a class="nav-link" href="pages/resume/resume.html"> About</a> |
+    <a class="nav-link" href="pages/tools/tools.html"> Tools </a>
   </nav>
 
   <h1>Projects</h1>
